--- a/src/styles/all.module.css
+++ b/src/styles/all.module.css
@@ -64,8 +64,8 @@
 
 /*===== 03)  BadgeCard Section =====*/
 .badgeCard {
-  border-radius: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  border-radius: 7px;
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
 .badgeCard .img {
   width: 20%;
